# hello-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  runner.json
agents/hello_world/: client_sse.py  client_stdio.py  client_studio.py  server_sse.py  server_stdio.py
docs/: README.md
matrix/:  register_in_matrix_hub.sh  hello-agent.manifest.json  hello-server.manifest.json  hello-tool.manifest.json  index.json
scripts/: README.md  build_bundle.sh  check_hub_readiness.sh  init.py  init.sh  install_python.sh  register_matrix.sh  register_matrix_inline.sh  register_matrix_url.sh  register_via_catalog.sh  register_via_manifest.sh  sanity_check.sh  test_remote_connection.sh  tokens.sh
