[tool.poetry]
name = "mcp-core-hello-world"
version = "0.1.0"
description = "A demo project for the core MCP library using STDIO and SSE."
authors = ["ruslannv <contact@ruslanmv.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mcp = "^1.12.2"
uvicorn = "^0.30.1" # Required for SSE transport
httpx = "^0.27.0"   # Required by SseClient

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"